3-deployment-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myexample-cluster1
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: web.myexample.myexample.co.in
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: myexample-web
              port:
                name: api-port
